--- a/src/views/_head.ejs
+++ b/src/views/_head.ejs
@@ -11,6 +11,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cards Game</title>
+    
+    <title>President Game</title>
+    
+    <!-- import client side css -->
+    <style src="./styles/styles.css"></style>
+    
+    <!-- import client side js -->
+    <script src="./client-script/main.js"></script>
 
 </head>
